force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/Customer_Feedback_Report__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback Report</label>
    <nameField>
        <displayFormat>CFR-{0000}</displayFormat>
        <label>Customer Feedback Report  Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>