force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/CFB_Cust__c.field-meta.xml
<CustomField>
    <fullName>CFB_Cust__c</fullName>
    <formula>Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFB-Cust</label>
    <type>Text</type>
</CustomField>