force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/CSI_Exe__c.field-meta.xml
<CustomField>
    <fullName>CSI_Exe__c</fullName>
    <formula>Executive__r.FirstName  +&apos; &apos; + Executive__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSI-Exe</label>
    <type>Text</type>
</CustomField>