force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Feedback Reports</relationshipLabel>
    <relationshipName>Customer_Feedback_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>