force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>Customer__r.SAP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>