force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Feedback_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>