force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/Overall_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rate__c</fullName>
    <formula>Total_Rate__c / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>