force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/fields/Total_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Rate__c</fullName>
    <label>Total Rate</label>
    <summarizedField>Customer_Feedback_Parameter__c.Total_Rating__c</summarizedField>
    <summaryForeignKey>Customer_Feedback_Parameter__c.Customer_Feedback_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>