force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Executive__c</columns>
    <columns>Date__c</columns>
    <columns>Overall_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>