force-app/force-app/force-app/main/default/objects/Customer_Feedback_Report__c/listViews/My_Customer_Feedback.listView-meta.xml
<ListView>
    <fullName>My_Customer_Feedback</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer__c</columns>
    <columns>Executive__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Customer Feedback</label>
</ListView>